[gd_scene load_steps=7 format=3 uid="uid://wt7dkwq8l3v7"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_4axqr"]
[ext_resource type="FontFile" uid="uid://d1xxjtmdhdxe" path="res://assets/fonts/ka1.ttf" id="2_qul6o"]
[ext_resource type="Texture2D" uid="uid://dpl43by708p3q" path="res://assets/bonez.png" id="3_cwdqo"]

[sub_resource type="Curve" id="Curve_xnbbc"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.133333, 0), 0.0, 0.0, 0, 0, Vector2(0.473333, 0.901099), 0.0, 0.0, 0, 0, Vector2(0.733333, 0.901099), 0.0, 0.0, 0, 0, Vector2(1, 0.021978), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_louxv"]
curve = SubResource("Curve_xnbbc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qfqrc"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(256, 36, 256)
angle_min = -325.1
angle_max = 92.9
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 40.0
initial_velocity_max = 50.0
alpha_curve = SubResource("CurveTexture_louxv")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4axqr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1165.0
offset_bottom = 657.0
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = 62.0
offset_right = 256.0
offset_bottom = 134.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_qul6o")
theme_override_font_sizes/font_size = 64
text = "Kart Wheel"

[node name="GPUParticles2D" type="GPUParticles2D" parent="Title"]
z_as_relative = false
position = Vector2(251, 256)
emitting = false
amount_ratio = 0.5
process_material = SubResource("ParticleProcessMaterial_qfqrc")
texture = ExtResource("3_cwdqo")
visibility_rect = Rect2(-99.1332, -63.4918, 213.791, 237.165)

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.5
offset_top = -32.5
offset_right = 59.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qul6o")
theme_override_font_sizes/font_size = 24
text = "Play"
flat = true

[node name="Controls" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 46.0
offset_right = 4.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qul6o")
theme_override_font_sizes/font_size = 24
text = "Controls"
flat = true

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = 85.5
offset_right = 21.0
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_qul6o")
theme_override_font_sizes/font_size = 24
text = "Quit"
flat = true

[connection signal="mouse_entered" from="Play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_play_mouse_exited"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
